--- a/index.html
+++ b/index.html
@@ -34,7 +34,34 @@
         <h1 class="bold">
          <span class="cursor">👻</span><span class="alizarin-text">Twitchlurk.tk</span><span class="cursor">👻</span>
             <br>
-		
+	<iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+            <iframe src="https://www.twitch.tv/embed/ludwig/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
+	 <iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
+             height="0"
+            width="0">             
+            </iframe>
   
 
 </h1></div></section></body></html>
