--- a/index.html
+++ b/index.html
@@ -34,34 +34,64 @@
         <h1 class="bold">
          <span class="cursor">👻</span><span class="alizarin-text">Twitchlurk.tk</span><span class="cursor">👻</span>
             <br>
-	<iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+				<iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
             <iframe src="https://www.twitch.tv/embed/ludwig/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+             height="500"
+            width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+			<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+			<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+			<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+			<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
-	 <iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
-             height="0"
-            width="0">             
+	<iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
             </iframe>
+	<iframe src="https://www.twitch.tv/embed/ninja/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+            <iframe src="https://www.twitch.tv/embed/tfue/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/rubius/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/myth/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/thegrefg/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/timthetatman/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+	<iframe src="https://www.twitch.tv/embed/Ibai/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			
+			
   
 
 </h1></div></section></body></html>
