--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="bold">
          <span class="cursor">👻</span><span class="alizarin-text">Twitchlurk.tk</span><span class="cursor">👻</span>
             <br>
-	<iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
+				<iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
@@ -42,27 +42,27 @@
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/ninja/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/ninja/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
@@ -70,26 +70,54 @@
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/rubius/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/rubius/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/myth/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/myth/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/thegrefg/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/thegrefg/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/timthetatman/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/timthetatman/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
-	<iframe src="https://www.twitch.tv/embed/Ibai/chat?parent=twitchlurk.tk"
+			<iframe src="https://www.twitch.tv/embed/Ibai/chat?parent=twitchlurk.tk"
              height="500"
             width="350">             
             </iframe>
+			 </iframe>
+            <iframe src="https://www.twitch.tv/embed/hostlurxx/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/nickmercs/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/heelmike/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/dakotaz/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/alanzoka/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/esl_csgo/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			
+			
+			
 			
 			
   
