--- a/index.html
+++ b/index.html
@@ -115,6 +115,90 @@
              height="500"
             width="350">             
             </iframe>
+	     <iframe src="https://www.twitch.tv/embed/xqcow/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+            <iframe src="https://www.twitch.tv/embed/ludwig/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/pokimane/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/shroud/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/monstercat/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/summit1g/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/commanderroot/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/tommyinnit/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+            <iframe src="https://www.twitch.tv/embed/drlupo/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/loltyler1/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/fresh/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/fortnite/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/bugha/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/mongraal/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			 </iframe>
+            <iframe src="https://www.twitch.tv/embed/clix/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/tsm_daequan/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/dreamwastaken/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/faker/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/benjyfishy/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			<iframe src="https://www.twitch.tv/embed/mzbetrayal/chat?parent=twitchlurk.tk"
+             height="500"
+            width="350">             
+            </iframe>
+			
+			
+			
 			
 			
 			
