--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><!-- Meta Data --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta property="og:site_name" content="Danny">
+<html><!-- Meta Data --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta property="og:site_name" content="Twitch.tv">
     <meta property="og:title" content="Twitch Lurk TV">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://brand.twitch.tv/assets/images/black.png">
